<resources>
	<string name="feather_illuminate">Illuminate</string>
	<string name="feather_details">Details</string>
	<string name="feather_tool">Tool</string>
	<string name="feather_notification_restore_all_completed">Restore All Completed</string>
	<string name="feather_acc_decrease_value">Decrease value</string>
	<string name="feather_effects">Effects</string>
	<string name="feather_auto_enhance_label">Auto</string>
	<string name="feather_edit_your_photo">Photo Editor</string>
	<string name="feather_image_saved">Image saved. Do you want to see the saved image?</string>
	<string name="feather_error_saving_aviary_folder">Oops, there was an error trying to save the image to the Aviary folder. Do you want to try to save it to the default camera folder?</string>
	<string name="feather_iap_restore_all_summary">Already purchased? Tap below to restore all your in-app purchases for free.</string>
	<string name="feather_new_effects">New Effects</string>
	<string name="feather_meme">Meme</string>
	<string name="feather_new_frames">New Frames</string>
	<string name="feather_whiten">Whiten</string>
	<string name="feather_iap_restore_all">Restore All</string>
	<string name="feather_message_title">Featured Effects: Toy Camera</string>
	<string name="feather_notification_n_items_cant_be_restored">%1$s item(s) could not be restored</string>
	<string name="feather_attention">Attention</string>
	<string name="feather_new_stickers">New Stickers</string>
	<string name="feather_effects_error_update_pack">Sorry, you must update the plugin to continue.</string>
	<string name="feather_effects_end_of_list">End of the list</string>
	<string name="feather_close">Close</string>
	<string name="feather_about_dialog_message">Aviary is the world\'s leading photo editing platform. Developers: learn how to add it to your app in minutes.</string>
	<string name="feather_message_button_no">No, thanks.</string>
	<string name="feather_rectangle">Rectangle</string>
	<string name="feather_revert_dialog_title">Revert to original?</string>
	<string name="feather_keep_editing">Keep editing</string>
	<string name="feather_sticker_delete_message">Are you sure you want to remove this sticker?</string>
	<string name="feather_mirror">Mirror</string>
	<string name="feather_infoscreen_bottom_button">About this editor</string>
	<string name="feather_effects_error_update_editor">Sorry, you must update the Aviary editor to use this plugin.</string>
	<string name="feather_update">Update</string>
	<string name="feather_effects_error_update_editors">This app needs to be updated to work with your installed effect packs. Tap \&quot;update\&quot; to update it in Google Play.</string>
	<string name="feather_filter_pack_updated">A filter pack has been updated. Click ok to reload the packs list.</string>
	<string name="feather_saturation">Saturation</string>
	<string name="feather_version">Version</string>
	<string name="feather_iap_restore">Restore</string>
	<string name="feather_revert_dialog_message">You\'re about to lose all the changes you\'ve made. Are you sure you want to revert to the original image?</string>
	<string name="feather_share">Share</string>
	<string name="feather_colorsplash_smart">Smart Color</string>
	<string name="feather_draw">Draw</string>
	<string name="feather_error_download_image_message">There was an error downloading the image, please try again later.</string>
	<string name="feather_error_saving_image">Oops, there was an error while saving the image.</string>
	<string name="feather_effect_loading_message">Applying effects</string>
	<string name="feather_iap_error">Error</string>
	<string name="feather_stickers_dialog_first_time">Install Aviary\'s free pack of beautiful high resolution stickers to get started.</string>
	<string name="feather_hidef">Hi-Def</string>
	<string name="feather_message_button_yes">Sure!</string>
	<string name="feather_iap_failed_download_previews">Failed to download the previews</string>
	<string name="feather_yes_leave">Leave editor</string>
	<string name="feather_enter_text_here">Enter text here</string>
	<string name="feather_feedback_dialog_message">Have a suggestion to improve this photo editor? Let us know.</string>
	<string name="feather_loading_image">Loading Image...</string>
	<string name="feather_circle">Circle</string>
	<string name="feather_effects_beginning_of_list">Beginning of the list</string>
	<string name="feather_view_file">View Image</string>
	<string name="feather_contrast">Contrast</string>
	<string name="feather_plugin_error_download">Failed to copy the plugin, please try to reinstall it</string>
	<string name="feather_acc_increase_value">Increase value</string>
	<string name="feather_confirm">Confirm</string>
	<string name="feather_iap_restore_all_in_progress">Restore All in Progress</string>
	<string name="feather_shapes">Shapes</string>
	<string name="feather_text">Text</string>
	<string name="feather_plugin_error_storage_not_available">Failed to copy the plugin inside the device storage</string>
	<string name="feather_effects_error_update_packs">One or more installed effect packs need to be updated. Tap \&quot;update\&quot; to update them all in Google Play. Alternatively, you can click any effect thumbnail marked with an update icon to update the pack it came from in Google Play.</string>
	<string name="feather_blemish">Blemish</string>
	<string name="feather_original">Original</string>
	<string name="feather_delete">Delete</string>
	<string name="feather_sticker_pack_updated_1">A sticker pack has been updated. Click ok to reload the packs list.</string>
	<string name="feather_sticker_pack_updated_2">A sticker pack has been updated. We need to reload the current panel.</string>
	<string name="feather_sticker_pack_updated_3">A sticker pack has been updated. We need to reload the current panel. Do you want to apply the current sticker?</string>
	<string name="feather_purchase_failed">Purchase failed. Please try again.</string>
	<string name="feather_send_feedback">Send Feedback</string>
	<string name="feather_iap_owned">Installed</string>
	<string name="feather_iap_failed_download_informations">Failed to download the required informations</string>
	<string name="feather_colorfix">Color Fix</string>
	<string name="feather_notification_some_items_cant_be_restored">Some items could not be restored</string>
	<string name="feather_tool_colorsplash">Splash</string>
	<string name="feather_item_not_found">Item not found</string>
	<string name="feather_colorsplash_free">Free Color</string>
	<string name="feather_no_purchase_made">No purchase made</string>
	<string name="feather_image_saved_in">Image saved in %1$s. Do you want to see the saved image?</string>
	<string name="feather_menu_reset">Reset</string>
	<string name="feather_custom">Custom</string>
	<string name="feather_infoscreen_text">Aviary is a free embeddable photo editor that developers can add to their app in just minutes.</string>
	<string name="feather_message_text">This beautiful new effects pack adds light leaks, cool colors, and visual distortions to your photos. Do you want to check it out?</string>
	<string name="feather_stickers">Stickers</string>
	<string name="feather_generic_error_title">Error</string>
	<string name="feather_activity_not_found">Sorry, there\'s no application on your device to handle this action. Do you want to download it now from the market?</string>
	<string name="feather_zoom_mode">Zoom Mode</string>
	<string name="feather_effects_error_loading_packs">Sorry, there was an error loading some of the effect packs.</string>
	<string name="feather_crash_toast_text">Oops! I crashed, but a report has been sent to my developer to help him fix the issue!</string>
	<string name="feather_acc_a_sticker">A sticker</string>
	<string name="feather_square">Square</string>
	<string name="feather_back_enhance_label">Backlit</string>
	<string name="feather_edit_bottom_text">Edit Bottom Text</string>
	<string name="feather_acc_lens_toggle">Toggle zoom</string>
	<string name="feather_adjust">Orientation</string>
	<string name="feather_powered_by_aviary">Powered by Aviary.com</string>
	<string name="filter_name">Free</string>
	<string name="feather_tool_temperature">Warmth</string>
	<string name="feather_loading_title">Loading...</string>
	<string name="feather_edit_top_text">Edit Top Text</string>
	<string name="feather_restore_all_request_sent">Request sent. Please check the notification area of your device more more info</string>
	<string name="feather_iap_pack_installed">Installed</string>
	<string name="feather_effects_error_update_multiple">You need to update this app and some of the installed effect packs. Tap \&quot;update\&quot; to update them all in Google Play. This app may not not perform correctly unless everything is updated to the latest version</string>
	<string name="feather_feedback">Feedback</string>
	<string name="feather_iap_unavailable">Unavailable</string>
	<string name="menu_premium">Store</string>
	<string name="feather_iap_download_failed">Download failed</string>
	<string name="feather_apply">Apply</string>
	<string name="feather_sharpen">Sharpness</string>
	<string name="feather_iap_restore_all_failed">Restore All Failed</string>
	<string name="feather_effects_unknown_errors">Unknown errors.</string>
	<string name="feather_borders_dialog_first_time">Install Aviary\'s free pack of beautiful high resolution frames to get started.</string>
	<string name="border_name">Free</string>
	<string name="feather_download">Download</string>
	<string name="feather_enhance">Enhance</string>
	<string name="feather_save">Done</string>
	<string name="feather_effects_error_loading_pack">Sorry, there was an error loading the plugin.</string>
	<string name="feather_supply_shop">Supply Shop</string>
	<string name="feather_notification_plus_more">%1$d more</string>
	<string name="feather_brightness">Brightness</string>
	<string name="feather_tool_tiltshift">Focus</string>
	<string name="feather_please_try_again_later">Plase try again later</string>
	<string name="confirm_quit_message">Wait! You didn\'t save your work. Are you certain that you want to close this editor?</string>
	<string name="feather_save_progress">Saving...</string>
	<string name="feather_iap_download">Free</string>
	<string name="feather_balance_enhance_label">Balance</string>
	<string name="feather_effects_unknown_error">Unknown error</string>
	<string name="feather_iap_list_empty_message">You have all the plugins installed</string>
	<string name="feather_tool_leave_question">Are you sure you want to discard changes from this tool?</string>
	<string name="feather_colorsplash_eraser">Eraser</string>
	<string name="feather_rotate">Rotate</string>
	<string name="feather_download_start_failed">Failed to start download. Please try again later</string>
	<string name="feather_plugin_error_corrupted">The plugin seems corrupted, please try to install it again</string>
	<string name="feather_tool_name">Aviary</string>
	<string name="feather_acc_flip_v">Flip vertical</string>
	<string name="feather_acc_size">Size</string>
	<string name="feather_iap_notification_installed_summary">Plugin succesfully installed</string>
	<string name="feather_get_more">Shop</string>
	<string name="feather_borders">Frames</string>
	<string name="feather_try_again">Try Again</string>
	<string name="feather_acc_rotate_cw">Rotate clockwise</string>
	<string name="feather_notification_no_items_to_restore">No item needs to be restored</string>
	<string name="feather_acc_flip_h">Flip horizontal</string>
	<string name="feather_acc_rotate_ccw">Rotate counter clockwise</string>
	<string name="feather_flip">Flip</string>
	<string name="feather_acc_color">Color</string>
	<string name="feather_sticker_name">Demo</string>
	<string name="feather_unsaved_from_camera">Are you sure you want to go back? Any unsaved progress could be lost.</string>
	<string name="feather_cancel">Cancel</string>
</resources>